[package]
name = "ef_tests-blockchain"
version.workspace = true
edition.workspace = true

[dependencies]
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-rlp.workspace = true
ethrex-vm.workspace = true
ethrex-prover = { path = "../../../crates/l2/prover", default-features = false }
zkvm_interface = { path = "../../../crates/l2/prover/zkvm/interface", default-features = false }

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
lazy_static.workspace = true
tokio = { workspace = true, features = ["full"] }
datatest-stable = "0.2.9"
regex = "1.11.1"

[lib]
path = "./lib.rs"

[features]
default = ["c-kzg", "blst"]
blst = ["ethrex-vm/blst"]
c-kzg = ["ethrex-blockchain/c-kzg"]
levm = []

[[test]]
name = "all"
harness = false
