[package]
name = "ef_tests-statev2"
version.workspace = true
edition.workspace = true

[dependencies]
ethrex-blockchain.workspace = true
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-rlp.workspace = true
ethrex-vm.workspace = true
ethrex-levm.workspace = true

serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hex.workspace = true
keccak-hash.workspace = true
thiserror.workspace = true
clap.workspace = true
clap_complete.workspace = true
tokio = { workspace = true, features = ["full"] }
colored = "2.1.0"
alloy-rlp = "0.3.12"

[dev-dependencies]
hex = "0.4.3"

[features]
default = ["c-kzg", "blst"]
c-kzg = ["ethrex-vm/c-kzg", "ethrex-levm/c-kzg", "ethrex-common/c-kzg"]
blst = ["ethrex-vm/blst"]
