[package]
name = "ethrex-dev"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-rpc.workspace = true

tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
jsonwebtoken.workspace = true
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
hex.workspace = true
reqwest = { version = "0.12.7", features = ["json"] }
envy = "0.4.2"
sha2 = "0.10.8"

[lib]
path = "./dev.rs"
