[package]
name = "ethrex-metrics"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true

ethrex-common.workspace = true


prometheus = { version = "0.13.4", optional = true }
axum = { workspace = true, optional = true }


[lib]
path = "./mod.rs"

[features]
default = ["api"]
transactions = []
l2 = []
api = ["dep:axum", "dep:prometheus", "dep:tokio", "dep:tracing"]
metrics = []
