[package]
name = "ethrex-trie"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
ethrex-rlp.workspace = true

ethereum-types.workspace = true
anyhow = "1.0.86"
bytes.workspace = true
tracing.workspace = true
thiserror.workspace = true
sha3.workspace = true
hex.workspace = true
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
libmdbx = { workspace = true, optional = true }
rocksdb = { workspace = true, optional = true }
smallvec = { version = "1.10.0", features = ["const_generics", "union"] }
digest = "0.10.6"
lazy_static.workspace = true

[features]
default = []
libmdbx = ["dep:libmdbx"]
rocksdb = ["dep:rocksdb"]


[dev-dependencies]
hex.workspace = true
hex-literal.workspace = true
proptest = "1.0.0"
tempfile.workspace = true
cita_trie = "4.0.0"          # used for proptest comparisons
hasher = "0.1.4"             # cita_trie needs this
criterion = "0.5.1"
rand.workspace = true

[lib]
path = "./trie.rs"

[[bench]]
name = "trie_bench"
harness = false
