[package]
name = "ethrex_l2-deployer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.0", features = ["full"] }
ethereum-types = { workspace = true, features = ["serialize"] }
bytes = { version = "1.6.0", features = ["serde"] }
secp256k1.workspace = true
keccak-hash.workspace = true
hex = "0.4.3"
serde_json = "1.0.138"
spinoff = "0.8.0"
colored = "2.1.0"
lazy_static = "1.5.0"
tracing.workspace = true
thiserror.workspace = true

ethrex-l2 = { path = "../../l2" }
ethrex-sdk = { path = "../../l2/sdk" }
ethrex-common = { path = "../../common" }
ethrex-rpc = { path = "../../networking/rpc" }

[[bin]]
name = "ethrex_l2_l1_deployer"
path = "./deployer.rs"

[[bin]]
name = "ethrex_l2_system_contracts_updater"
path = "./system_contracts_updater.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
