[package]
name = "ethrex-prover"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
hex.workspace = true
thiserror.workspace = true

# ethrex
ethrex-common.workspace = true
ethrex-vm.workspace = true
ethrex-rlp.workspace = true

# l2
ethrex-l2.workspace = true

zkvm_interface = { path = "./zkvm/interface", default-features = false }

# risc0
risc0-zkvm = { version = "1.2.2" }

# sp1
sp1-sdk = "4.1.1"
sp1-recursion-gnark-ffi = "4.1.1"

[dev-dependencies]
ethrex-storage.workspace = true
ethrex-blockchain.workspace = true

[lib]
name = "ethrex_prover_lib"
path = "src/lib.rs"

[[bin]]
name = "ethrex_prover"
path = "src/main.rs"

[features]
default = []
build_risc0 = ["zkvm_interface/build_risc0"]
build_sp1 = ["zkvm_interface/build_sp1"]
l2 = [
  "ethrex-vm/l2",
  "zkvm_interface/l2",
  "ethrex-blockchain/l2",
] # the prover can work with both l1 or l2 blocks
gpu = ["risc0-zkvm/cuda", "sp1-sdk/cuda"]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
