[package]
name = "ethrex-prover"
version.workspace = true
edition.workspace = true

[dependencies]
serde_json.workspace = true
serde.workspace = true
bytes.workspace = true
ethereum-types.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tracing.workspace = true
hex.workspace = true
thiserror.workspace = true
clap.workspace = true
kzg-rs = "0.2.6"
cfg-if.workspace = true
bincode = "1.3.3"

# ethrex
ethrex-common.workspace = true
ethrex-storage.workspace = true
ethrex-vm.workspace = true
ethrex-rlp.workspace = true
ethrex-blockchain.workspace = true

# l2
ethrex-l2 = { path = "../", default-features = false }
ethrex-l2-common = {workspace = true, optional = true }
ethrex-sdk.workspace = true

zkvm_interface = { path = "./zkvm/interface", default-features = false }

risc0-zkvm = { version = "1.2.2", optional = true }
risc0-ethereum-contracts = { version = "1.3.1", optional = true }

sp1-sdk = { version = "5.0.0", optional = true }
sp1-recursion-gnark-ffi = { version = "5.0.0", optional = true }

[dev-dependencies]
ethrex-storage.workspace = true

[lib]
name = "ethrex_prover_lib"
path = "src/lib.rs"

[[bin]]
name = "ethrex_prover"
path = "src/main.rs"

[features]
# TODO(#2662) Prover shouldn't have l2 as a default but cargo complains about missing field in struct
default = ["l2"]
# prover backends
risc0 = [
  "zkvm_interface/risc0",
  "dep:risc0-zkvm",
  "dep:risc0-ethereum-contracts",
]
sp1 = ["zkvm_interface/sp1", "dep:sp1-sdk"]

gpu = ["risc0-zkvm?/cuda", "sp1-sdk?/cuda"]
l2 = [
  "dep:ethrex-l2-common",
  "ethrex-vm/l2",
  "zkvm_interface/l2",
  "ethrex-blockchain/l2",
  "ethrex-l2/l2",
] # the prover can work with either l1 or l2 blocks

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
