[package]
name = "ethrex-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
ethrex-common.workspace = true
ethrex-rpc.workspace = true

ethereum-types.workspace = true
tokio.workspace = true
hex.workspace = true
keccak-hash.workspace = true
secp256k1.workspace = true
itertools = "0.13.0"
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
ethrex-rlp.workspace = true
bytes.workspace = true
reqwest.workspace = true

eyre = "0.6"

[lib]
name = "ethrex_l2_sdk"
path = "src/sdk.rs"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
