[package]
name = "ethrex-sdk"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

[dependencies]
ethrex-common.workspace = true
ethrex-rpc.workspace = true
ethrex-l2-common.workspace = true
ethrex-l2-rpc.workspace = true
ethrex-sdk-contract-utils = { path = "contract_utils" }

ethereum-types.workspace = true
tokio.workspace = true
hex.workspace = true
secp256k1.workspace = true
itertools = "0.13.0"
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
ethrex-rlp.workspace = true
bytes.workspace = true
reqwest.workspace = true
eyre.workspace = true
lazy_static.workspace = true

[lib]
name = "ethrex_l2_sdk"
path = "src/sdk.rs"

[build-dependencies]
ethrex-sdk-contract-utils = { path = "contract_utils" }
hex.workspace = true

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
indexing_slicing = "deny"
as_conversions = "deny"
unnecessary_cast = "warn"
panic = "deny"
