[package]
name = "ethrex-p2p"
version.workspace = true
edition.workspace = true
authors.workspace = true
documentation.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethrex-common.workspace = true
ethrex-blockchain.workspace = true
ethrex-rlp.workspace = true
ethrex-storage.workspace = true
ethrex-trie.workspace = true
ethrex-storage-rollup.workspace = true
ethereum-types.workspace = true

async-trait.workspace = true
tracing.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "net"] }
bytes.workspace = true
hex.workspace = true
thiserror.workspace = true
lazy_static.workspace = true
snap.workspace = true
serde.workspace = true
secp256k1.workspace = true
spawned-rt.workspace = true
spawned-concurrency.workspace = true
sha2.workspace = true
futures.workspace = true
prometheus = "0.14.0"

tokio-stream = "0.1.17"
sha3 = "0.10.8"

serde_json = "1.0.117"

# RLPx
concat-kdf = "0.1.0"
hmac = "0.12.1"
aes = "0.8.4"
ctr = "0.9.2"
rand = "0.8.5"

rayon = "1.10.0"

[dev-dependencies]
hex-literal = "0.4.1"

[lib]
path = "./p2p.rs"

[features]
default = ["c-kzg"]
c-kzg = ["ethrex-blockchain/c-kzg", "ethrex-common/c-kzg"]
sync-test = []

[lints.clippy]
unwrap_used = "deny"
